# EFGMarketData

./: README.md
EFGMarketData/: CMakeLists.txt  Config.cmake.in  csvMDRecorder.cpp  main.cpp
EFGMarketData/Application/include/MarketData/: MarketData.h
EFGMarketData/Application/src/MarketData/: MarketData.cpp
EFGMarketData/Client/FeedHandlers/include/MarketData/: ClientFeedHandlers.h
EFGMarketData/Config/: binance_futures_md_subscription.cfg  binance_spot_md_subscription.cfg  bitfinex_md_subscription.cfg  bitmex_md_subscription.cfg  bybit_md_subscription.cfg  ftx_md_subscription.cfg  huobi_futures_index_md_subscription.cfg  huobi_futures_md_subscription.cfg  huobi_spot_md_subscription.cfg  huobi_swap_md_subscription.cfg  huobi_swap_usdt_md_subscription.cfg  marketdata_info.cfg  okex_md_subscription.cfg  okex_spot_md_subscription.cfg  okex_swap_md_subscription.cfg  read_shm_queue.cfg  sessions.cfg  write_shm_queue.cfg
EFGMarketData/Config/include/MarketData/: compile_config.h
EFGMarketData/ConfigManager/IPCConfig/include/MarketData/: RingbufferConfig.h
EFGMarketData/ConfigManager/IPCConfig/src/MarketData/: RingbufferConfig.cpp
EFGMarketData/ConfigManager/MarketDataInfoManager/include/MarketData/: MarketDataInfoManager.h
EFGMarketData/ConfigManager/MarketDataInfoManager/src/MarketData/: MarketDataInfoManager.cpp
EFGMarketData/ConfigManager/Utils/include/MarketData/: ConfigReader.h
EFGMarketData/ConfigManager/VenueSessionInfo/include/MarketData/: VenueSessionInfo.h
EFGMarketData/ConfigManager/VenueSessionInfo/src/MarketData/: VenueSessionInfo.cpp
EFGMarketData/Tests/: Tests.cpp
EFGMarketData/Utils/Common/include/MarketData/: CommonUtils.h  debug.h  json.h
EFGMarketData/Utils/Common/src/MarketData/: CommonUtils.cpp
EFGMarketData/Utils/EventProcessingQueue/include/MarketData/: EventProcessingQueue.h
EFGMarketData/Utils/Logger/include/MarketData/: Logger.h
EFGMarketData/Utils/Logger/src/MarketData/: Logger.cpp
EFGMarketData/Utils/OrderBook/include/MarketData/: orderbook.h
EFGMarketData/Utils/SHM/include/MarketData/: ringbuffer.h
EFGMarketData/Utils/SHM/src/MarketData/: ringbuffer.cpp
EFGMarketData/Utils/SplayTree/include/MarketData/: bstree_algorithms.h  bstree_algorithms_base.h  splaytree.h  splaytree_algorithms.h
EFGMarketData/Utils/Timer/include/MarketData/: Timer.h
EFGMarketData/VenueSession/include/MarketData/AbstractVenue/: AbstractVenue.h  SubscriptionHandler.h
EFGMarketData/VenueSession/include/MarketData/BINANCE_COIN_FUTURES/: BINANCE_COIN_FUTURES.h
EFGMarketData/VenueSession/include/MarketData/BINANCE_FUTURES/: BINANCE_FUTURES.h
EFGMarketData/VenueSession/include/MarketData/BINANCE_OPTIONS/: BINANCE_OPTIONS.h
EFGMarketData/VenueSession/include/MarketData/BINANCE_SPOT/: BINANCE_SPOT.h
EFGMarketData/VenueSession/include/MarketData/BITFINEX/: BITFINEX.h
EFGMarketData/VenueSession/include/MarketData/BITMEX/: BITMEX.h
EFGMarketData/VenueSession/include/MarketData/BYBIT/: BYBIT.h
EFGMarketData/VenueSession/include/MarketData/CME/: CME.h
EFGMarketData/VenueSession/include/MarketData/COINBASE/: COINBASE.h
EFGMarketData/VenueSession/include/MarketData/HUOBI_FUTURES/: HUOBI_FUTURES.h
EFGMarketData/VenueSession/include/MarketData/HUOBI_SPOT/: HUOBI_SPOT.h
EFGMarketData/VenueSession/include/MarketData/HUOBI_SWAP/: HUOBI_SWAP.h
EFGMarketData/VenueSession/include/MarketData/HUOBI_SWAP_USDT/: HUOBI_SWAP_USDT.h
EFGMarketData/VenueSession/include/MarketData/KITE_ZERODHA/: KITE_ZERODHA.h
EFGMarketData/VenueSession/include/MarketData/KITE_ZERODHA/cpp-httplib/: httplib.h
EFGMarketData/VenueSession/include/MarketData/KITE_ZERODHA/kitepp/: config.hpp  kite.hpp  kitews.hpp  responses.hpp  rjutils.hpp
EFGMarketData/VenueSession/include/MarketData/OKEX/: OKEX.h
EFGMarketData/VenueSession/include/MarketData/Utils/: base16.h  base64.h  hmac.h
EFGMarketData/VenueSession/src/MarketData/AbstractVenue/: AbstractVenue.cpp  SubscriptionHandler.cpp
EFGMarketData/VenueSession/src/MarketData/BINANCE_COIN_FUTURES/: BINANCE_COIN_FUTURES.cpp
EFGMarketData/VenueSession/src/MarketData/BINANCE_FUTURES/: BINANCE_FUTURES.cpp
EFGMarketData/VenueSession/src/MarketData/BINANCE_OPTIONS/: BINANCE_OPTIONS.cpp
EFGMarketData/VenueSession/src/MarketData/BINANCE_SPOT/: BINANCE_SPOT.cpp
EFGMarketData/VenueSession/src/MarketData/BITFINEX/: BITFINEX.cpp
EFGMarketData/VenueSession/src/MarketData/BITMEX/: BITMEX.cpp
EFGMarketData/VenueSession/src/MarketData/BYBIT/: BYBIT.cpp
EFGMarketData/VenueSession/src/MarketData/CME/: CME.cpp
EFGMarketData/VenueSession/src/MarketData/COINBASE/: COINBASE.cpp
EFGMarketData/VenueSession/src/MarketData/HUOBI_FUTURES/: HUOBI_FUTURES.cpp
EFGMarketData/VenueSession/src/MarketData/HUOBI_SPOT/: HUOBI_SPOT.cpp
EFGMarketData/VenueSession/src/MarketData/HUOBI_SWAP/: HUOBI_SWAP.cpp
EFGMarketData/VenueSession/src/MarketData/HUOBI_SWAP_USDT/: HUOBI_SWAP_USDT.cpp
EFGMarketData/VenueSession/src/MarketData/KITE_ZERODHA/: KITE_ZERODHA.cpp
EFGMarketData/VenueSession/src/MarketData/OKEX/: OKEX.cpp
EFGMarketData/VenueSession/src/MarketData/Utils/: hmac.cpp
EFGMarketData/lib/EFGCore/lib/cmake/EFGCore/: EFGCoreConfig.cmake  EFGCore_TARGETS-noconfig.cmake  EFGCore_TARGETS.cmake
